Fixed bugs where timers misaligned

--- a/public/code/master.css
+++ b/public/code/master.css
@@ -57,7 +57,7 @@ header {
 .timerInput, .timerDisplay, .stopwatchDisplay {
   position: fixed;
   width: 100%;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   left: 50%;
